<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/parent.contentLayout"
    android:orientation="vertical"
    android:background="@drawable/bkgame"
    android:gravity="center"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >
    <TextView
        style="@style/viewParent.headerText"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@android:color/black"
        android:fontFamily="@font/el_messiri_semibold"
        android:text="ألْعَابٌ تَعْلِيمِيَّةٌْ" />
    <Button
        android:id="@+id/animals"
        android:text="@string/animals"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content"
        android:layout_width="120dp"
        android:textSize="21sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:fontFamily="@font/el_messiri_semibold"
        android:background="@drawable/backbtnlevels"
        />

    <Button
        android:id="@+id/fruits"
        android:text="@string/fruits"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"
        android:layout_width="120dp"
        android:textSize="21sp"
        android:textStyle="bold"
        android:background="@drawable/backbtnlevels"
        android:textColor="@android:color/white"
        android:fontFamily="@font/el_messiri_semibold">
    </Button>
    <Button
        android:id="@+id/colors"
        android:text="@string/colors"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"
        android:layout_width="120dp"
        android:textSize="21sp"
        android:textStyle="bold"
        android:background="@drawable/backbtnlevels"
        android:textColor="@android:color/white"
        android:fontFamily="@font/el_messiri_semibold">
    </Button>
    <Button
        android:id="@+id/directions"
        android:text="@string/directions"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"
        android:layout_width="120dp"
        android:textSize="21sp"
        android:textStyle="bold"
        android:background="@drawable/backbtnlevels"
        android:textColor="@android:color/white"
        android:fontFamily="@font/el_messiri_semibold">
    </Button>
    <Button
        android:id="@+id/shapes"
        android:text="@string/shapes"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"
        android:layout_width="120dp"
        android:textSize="21sp"
        android:textStyle="bold"
        android:background="@drawable/backbtnlevels"
        android:textColor="@android:color/white"
        android:fontFamily="@font/el_messiri_semibold">
    </Button>
    <Button
        android:id="@+id/jobs"
        android:text="@string/jobs"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"
        android:layout_width="120dp"
        android:textSize="21sp"
        android:textStyle="bold"
        android:background="@drawable/backbtnlevels"
        android:textColor="@android:color/white"
        android:fontFamily="@font/el_messiri_semibold">
    </Button>
    <Button
        android:id="@+id/memory"
        android:text="لُعْبَةُ الذَّاكِرَة"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"
        android:layout_width="120dp"
        android:textSize="21sp"
        android:textStyle="bold"
        android:background="@drawable/backbtnlevels"
        android:textColor="@android:color/white"
        android:fontFamily="@font/el_messiri_semibold">
    </Button>
</LinearLayout>
